[package]
name = "pallet-currencies"
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>", "Sora Yu <ymlll0508@gmail.com>"]
edition = "2021"

[dependencies]
scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-traits = { workspace = true }
orml-utilities = { workspace = true }

astar-primitives = { workspace = true }
ggx-primitives = { workspace = true }

[dev-dependencies]
fp-evm.workspace = true
hex = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
pallet-balances = { workspace = true }
pallet-contracts.workspace = true
pallet-erc20.workspace = true
pallet-ethereum.workspace = true
pallet-ethereum-checked.workspace = true
pallet-evm.workspace = true
pallet-randomness-collective-flip.workspace = true
pallet-timestamp.workspace = true
pallet-xvm.workspace = true
serde_json = { workspace = true, features = ["std"] }
sp-core = { workspace = true }

orml-tokens = { workspace = true }

[features]
default = ["std"]
std = [
	"astar-primitives/std",
	"serde",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"ggx-primitives/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-utilities/std",
	"pallet-contracts/std",
	"pallet-erc20/std",
	"pallet-ethereum/std",
	"pallet-ethereum-checked/std",
	"pallet-evm/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-xvm/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
