[package]
name = "pallet-dex"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
scale-info.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
sp-core.workspace = true

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]

try-runtime = ["frame-support/try-runtime"]