[package]
name = "pallet-dex"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
ggx-primitives.workspace = true
log.workspace = true
orml-traits = { workspace = true }
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
scale-info.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true

[dev-dependencies]
astar-primitives.workspace = true
fp-evm.workspace = true
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-contracts.workspace = true
pallet-currencies.workspace = true
pallet-erc20.workspace = true
pallet-evm.workspace = true
pallet-randomness-collective-flip.workspace = true
pallet-timestamp.workspace = true
pallet-xvm.workspace = true
sp-core.workspace = true
sp-std.workspace = true
orml-tokens = { workspace = true }

[features]
default = ["std"]
std = [
	"astar-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"fp-evm/std",
	"ggx-primitives/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-currencies/std",
	"pallet-erc20/std",
	"pallet-evm/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-xvm/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
]

try-runtime = ["frame-support/try-runtime"]