[package]
name = "pallet-erc20"
version = "2.25.0"
authors = ["Acala Developers"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum-types = { workspace = true }
impl-trait-for-tuples = { workspace = true }
num_enum = { workspace = true }

scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

ggx-primitives = { workspace = true }
astar-primitives =  { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"astar-primitives/std",
	"ethereum-types/std",
	"frame-support/std",
	"frame-system/std",
	"num_enum/std",
	"ggx-primitives/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
