[package]
name = "pallet-ggx-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
license = "Apache-2.0"
version = "0.4.1-dev"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }

frame-support.workspace = true
frame-system.workspace = true
sp-arithmetic.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

orml-traits.workspace = true

[dev-dependencies]
pallet-treasury.workspace = true
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
	"serde",

	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]