[package]
name = "pallet-evm-eth-receipt-provider"
description = "A Precompile to make pallet-session accessible to pallet-evm"
version.workspace = true
license = "Unlicense"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
num_enum.workspace = true

# Moonbeam
precompile-utils.workspace = true

# Substrate
frame-support.workspace = true
frame-system.workspace = true
pallet-receipt-registry.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true

eth-light-client-types.workspace = true
webb-proposals.workspace = true

# Frontier
fp-evm.workspace = true
pallet-evm.workspace = true

[dev-dependencies]
derive_more.workspace = true
hex-literal.workspace = true
libsecp256k1.workspace = true
serde.workspace = true
sha3.workspace = true

pallet-timestamp.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true }
sp-runtime.workspace = true
sp-staking.workspace = true

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-receipt-registry/std",
	"eth-light-client-types/std",
	"webb-proposals/std",
]
