[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2018"
version = "0.1.0"

[dependencies]
impl-trait-for-tuples.workspace = true
log.workspace = true
num_enum.workspace = true
sha3.workspace = true

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
scale-codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true

# Frontier
fp-evm.workspace = true
pallet-evm.workspace = true

# Polkadot / XCM
# xcm.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[features]
default = [ "std" ]
std = [
	"scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
