[package]
name = "pallet-evm-precompile-xvm"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Cross-VM call support for EVM."
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
pallet-xvm = { workspace = true, default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Substrate
scale-codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Frontier
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false, features = ["forbid-evm-reentrancy"] }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = { workspace = true }
serde = { workspace = true }

precompile-utils = { path = "../utils", features = ["testing"] }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-xvm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
]
