[package]
name = "pallet-evm-precompile-zk-groth16-verify"
description = "A Precompile to add zk groth16 verify"
version = "0.0.0"
license = "Unlicense"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
num_enum.workspace = true

# Moonbeam
precompile-utils.workspace = true

# Substrate
frame-support.workspace = true
frame-system.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
sp-core.workspace = true
sp-io.workspace = true
sp-std.workspace = true

# Frontier
fp-evm.workspace = true
pallet-evm.workspace = true

# zk precompile
hex = { version = "0.4", default-features = false }
num-bigint = { workspace = true }
# zksnark
ark-bn254 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }

[dev-dependencies]
derive_more.workspace = true
hex-literal.workspace = true
libsecp256k1.workspace = true
serde.workspace = true
sha3.workspace = true

pallet-balances.workspace = true
pallet-timestamp.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true }
sp-runtime.workspace = true
sp-staking.workspace = true

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
