[package]
name = "fp-self-contained"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitive Ethereum abstractions for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }
parity-util-mem = { workspace = true, optional = true }
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
# Substrate
frame-support = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"serde",
	# Parity
	"scale-codec/std",
	"parity-util-mem",
	"scale-info/std",
	# Substrate
	"sp-runtime/std",
	# Substrate FRAME
	"frame-support/std",
]

try-runtime = [
]
