[package]
name = "golden-gate-runtime-mainnet"
version = "0.0.0"
license = "Unlicense"
description = "Golden Gate PoS Runtime"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info.workspace = true
serde = { workspace = true, optional = true }

# Substrate
sp-api.workspace = true
sp-arithmetic.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support.workspace = true
frame-executive.workspace = true
frame-support.workspace = true
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-bounties.workspace = true
pallet-conviction-voting.workspace = true
pallet-election-provider-multi-phase.workspace = true
pallet-grandpa.workspace = true
pallet-identity.workspace = true
pallet-im-online.workspace = true
pallet-indices.workspace = true
pallet-multisig.workspace = true
pallet-offences.workspace = true
pallet-preimage.workspace = true
pallet-proxy.workspace = true
pallet-randomness-collective-flip.workspace = true
pallet-ranked-collective.workspace = true
pallet-referenda.workspace = true
pallet-scheduler.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-society.workspace = true
pallet-staking.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
pallet-treasury.workspace = true
pallet-vesting.workspace = true
pallet-whitelist.workspace = true

# Frontier
fp-evm.workspace = true
fp-rpc.workspace = true
fp-self-contained.workspace = true

# Frontier FRAME
pallet-base-fee.workspace = true
pallet-dynamic-fee.workspace = true
pallet-ethereum.workspace = true
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
pallet-evm-chain-id.workspace = true
pallet-hotfix-sufficients.workspace = true

# GGX
account-filter.workspace = true
runtime-common = { workspace = true, features = ["xvm"] }

# Astar
pallet-chain-extension-xvm.workspace = true
pallet-xvm = { workspace = true, default-features = false, features = ["evm", "wasm"] }

# Wasm contracts
pallet-contracts-primitives.workspace = true
pallet-contracts.workspace = true

[build-dependencies]
substrate-wasm-builder.workspace = true

[dev-dependencies]
paste.workspace = true
sp-io.workspace = true

[features]
default = ["std", "aura", "with-rocksdb-weights"]
fast-runtime = []

std = [
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	# Substrate FRAME
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-conviction-voting/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-ranked-collective/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-society/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-treasury/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	# Frontier
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier FRAME
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-hotfix-sufficients/std",
	# GGX
	"account-filter/std",
	"runtime-common/std",
	# Astar
	"pallet-chain-extension-xvm/std",
	"pallet-xvm/std",
	# Wasm contracts
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
]
aura = []
allowlist = []
manual-seal = ["with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
