[package]
name = "runtime-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info.workspace = true
serde = { workspace = true, optional = true }

frame-support.workspace = true
frame-system.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
sp-core.workspace = true
sp-staking.workspace = true
sp-std.workspace = true

pallet-contracts = { workspace = true, optional = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"], optional = true }
pallet-evm-precompile-blake2 = { workspace = true, optional = true }
pallet-evm-precompile-bn128 = { workspace = true, optional = true }
pallet-evm-precompile-ed25519 = { workspace = true, optional = true }
pallet-evm-precompile-modexp = { workspace = true, optional = true }
pallet-evm-precompile-sha3fips = { workspace = true, optional = true }
pallet-evm-precompile-simple = { workspace = true, optional = true }
pallet-evm-precompile-sr25519 = { workspace = true, optional = true }
pallet-evm-precompile-substrate-ecdsa = { workspace = true, optional = true }
pallet-evm-precompile-xvm = { workspace = true, optional = true }
pallet-xvm = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
test-strategy.workspace = true

[features]
default = ["std"]
xvm = [
	"pallet-contracts",
	"pallet-evm",
	"pallet-evm-precompile-blake2",
	"pallet-evm-precompile-bn128",
	"pallet-evm-precompile-ed25519",
	"pallet-evm-precompile-modexp",
	"pallet-evm-precompile-sha3fips",
	"pallet-evm-precompile-simple",
	"pallet-evm-precompile-sr25519",
	"pallet-evm-precompile-substrate-ecdsa",
	"pallet-evm-precompile-xvm",
	"pallet-xvm",
]
std = [
	"serde/std",
	"scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-core/std",
	"sp-staking/std",
	"sp-std/std",

	"pallet-contracts?/std",
	"pallet-evm?/std",
	"pallet-evm-precompile-blake2?/std",
	"pallet-evm-precompile-bn128?/std",
	"pallet-evm-precompile-ed25519?/std",
	"pallet-evm-precompile-modexp?/std",
	"pallet-evm-precompile-sha3fips?/std",
	"pallet-evm-precompile-simple?/std",
	"pallet-evm-precompile-sr25519?/std",
	"pallet-evm-precompile-substrate-ecdsa?/std",
	"pallet-evm-precompile-xvm?/std",
	"pallet-xvm?/std",
]
